RESOLVED FIXED234183
[JSC] Wasm catch thunk should be JIT code to use ExceptionHandlerPtrTag
https://bugs.webkit.org/show_bug.cgi?id=234183
Summary [JSC] Wasm catch thunk should be JIT code to use ExceptionHandlerPtrTag
Yusuke Suzuki
Reported 2021-12-10 15:53:48 PST
[JSC] Wasm catch thunk should be JIT code to use ExceptionHandlerPtrTag
Attachments
Patch (7.37 KB, patch)
2021-12-10 15:54 PST, Yusuke Suzuki
tzagallo: review+
Yusuke Suzuki
Comment 1 2021-12-10 15:54:56 PST
Tadeu Zagallo
Comment 2 2021-12-10 15:56:46 PST
Comment on attachment 446833 [details] Patch r=me
Yusuke Suzuki
Comment 3 2021-12-10 21:11:29 PST
Radar WebKit Bug Importer
Comment 4 2021-12-10 21:12:20 PST
Note You need to log in before you can comment on or make changes to this bug.