[JSC] Wasm catch thunk should be JIT code to use ExceptionHandlerPtrTag https://bugs.webkit.org/show_bug.cgi?id=234183

Reviewed by Tadeu Zagallo.

ExceptionHandlerPtrTag is only usable for JITCode. Thus, we should not tag wasm catch LLInt code with it.
This patch fixes it by using trampoline. This is the same to normal LLInt's handleCatchThunk.

* assembler/JITOperationList.cpp:
(JSC::JITOperationList::populatePointersInJavaScriptCoreForLLInt):
* llint/LLIntExceptions.cpp:
(JSC::LLInt::handleWasmCatch):
(JSC::LLInt::handleWasmCatchAll):
* llint/LLIntThunks.cpp:
(JSC::LLInt::handleWasmCatchThunk):
(JSC::LLInt::handleWasmCatchAllThunk):
* llint/LLIntThunks.h:


Canonical link: https://commits.webkit.org/245129@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286901 268f45cc-cd09-0410-ab3c-d52691b4dbfc